welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:5: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Short)Int
match expected type ?
while((a%)!=a && (b%)!=b){
        ^lastDigit:6: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Short)Int
match expected type ?
   x=x%
      ^